--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
 }
 
 
+
+
 body{
     background-color: black;
     max-width: 100%;
         overflow-x: hidden;
+        margin: 0;
     }
 
 
@@ -22,6 +25,9 @@ body{
 .grid {
     display: grid;
     grid-template-columns: repeat(5,1fr);
+    grid-gap: 0;
+    margin: 0px;
+    padding: 0px;
     width: 500px;
     height: 500px;
     align-items: center;
@@ -84,8 +90,8 @@ body{
     cursor: pointer;
     z-index: 1;
     border: solid black;
-    position: relative;
-    left: 200px;
+    /* position: relative;
+    left: 200px; */
 
 
     
@@ -95,19 +101,125 @@ body{
     color: white;
     font-size: 40px;
     display: inline-block;
-    position: relative;
+    /* position: relative;
     bottom: 100px;
-    right: 100px;
+    right: 100px; */
 
 
 }
 
 #restartContainer {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
     width: fit-content;
-    left: 510px;
-    top: 400px;
+    left: 30%;
+    top: 50%;
+}
+
+.loserDisplayPage{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height:100%;
 
 }
 
+@media(max-width:795px){
+    .loser {
+        position: absolute;
+        left: 20%;
+    }
+    .grid {
+        position:absolute;
+        left: 20%;
+    }
 
+
+}
+
+@media(max-width:650px){
+    .loser {
+        position: absolute;
+        left: 10%;
+    }
+    #restartContainer{
+        position: absolute;
+        left: 10%;
+    }
+
+    .numbers {
+        height: 75px;
+        width: 75px;
+        margin: 0px;
+        padding: 0px;
+    }
+    .grid{
+        width: 375px;
+        height: 375px;
+    }
+
+    .roundContainer{
+        position: absolute;
+        right: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+
+
+
+
+}
+
+@media (max-width:450px){
+    .loser {
+        font-size: 50px;
+        position: absolute;
+        top: 20%;
+        right: 100%;
+    }
+
+    #restartContainer p {
+        font-size: 30px;
+    }
+
+    .restart {
+        width: 150px;
+        height: 75;
+        font-size: 30px;
+    }
+}
+
+
+@media (max-width:485px){
+    .numbers {
+        width: 60px;
+        height: 60px;
+
+    }
+    .grid{
+        width: 300px;
+        height: 300px;
+        position: relative;
+        left: 10px;
+        top: 150px;
+
+    }
+    #round{
+        font-size: 30px;
+        position: relative;
+        top: 70px;
+        left: 200px;
+    }
+    .number{
+        font-size: 30px;
+        position: relative;
+        top: 5px;
+        left: 300px;
+    }
+
+}
