--- a/style.css
+++ b/style.css
@@ -1,226 +1,206 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-
-body{
-    background-color: black;
-    max-width: 100%;
-        overflow-x: hidden;
-        margin: 0;
-    }
-
-
+body {
+  background-color: black;
+  max-width: 100%;
+  overflow-x: hidden;
+  margin: 0;
+}
 
 .numbers {
-    height: 100px;
-    width: 100px;
-    font-size: 35px;
-    cursor: pointer;
-    background-color: gray;
+  height: 100px;
+  width: 100px;
+  font-size: 35px;
+  cursor: pointer;
+  background-color: gray;
+}
+
+.numbers:focus {
+  background-color: red;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-gap: 0;
-    margin: 0px;
-    padding: 0px;
-    width: 500px;
-    height: 500px;
-    align-items: center;
-    position:absolute;
-    left: 35%;
-    top: 20%;
-    
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 0;
+  margin: 0px;
+  padding: 0px;
+  width: 500px;
+  height: 500px;
+  align-items: center;
+  position: absolute;
+  left: 35%;
+  top: 20%;
 }
 
 #play {
-    width: 200px;
-    height: 100px;
-    font-size: 40px;
-    cursor: pointer;
-    position: absolute;
-    left: 45%;
-    top: 47%;
-    z-index: 1;
-    border: solid black;
-        
+  width: 200px;
+  height: 100px;
+  font-size: 40px;
+  cursor: pointer;
+  position: absolute;
+  left: 45%;
+  top: 47%;
+  z-index: 1;
+  border: solid black;
 }
 
 .active {
-    background-color: yellow;
+  background-color: red;
 }
 
 .loser {
-    color: red;
-    font-size: 80px;
-    position: absolute;
-    left: 40%;
-    top: 3%;
-    z-index: 3;
-    height: 200px;
-    width: 400px;
-    font-weight: 1000; 
-    text-align: center; 
+  color: red;
+  font-size: 80px;
+  position: absolute;
+  left: 40%;
+  top: 3%;
+  z-index: 3;
+  height: 200px;
+  width: 400px;
+  font-weight: 1000;
+  text-align: center;
 }
 
-.round{
-    font-size: 50px;
-    z-index: 3;
-    color: white;
-    position: relative;
-    left: 400px;
-
-    
+.round {
+  font-size: 50px;
+  z-index: 3;
+  color: white;
+  position: relative;
+  left: 400px;
 }
 
-.number{
-    left: 580px;
-    top: -106px;
-
+.number {
+  left: 580px;
+  top: -106px;
 }
 
-.restart{
-    width: 200px;
-    height: 100px;
-    font-size: 40px;
-    cursor: pointer;
-    z-index: 1;
-    border: solid black;
-    /* position: relative;
+.restart {
+  width: 200px;
+  height: 100px;
+  font-size: 40px;
+  cursor: pointer;
+  z-index: 1;
+  border: solid black;
+  /* position: relative;
     left: 200px; */
 }
 
-.score{
-    margin: 10px;
+.score {
+  margin: 10px;
 }
 
 #restartContainer p {
-    color: white;
-    font-size: 40px;
-    display: inline-block;
-    /* position: relative;
+  color: white;
+  font-size: 40px;
+  display: inline-block;
+  /* position: relative;
     bottom: 100px;
     right: 100px; */
-
-
 }
 
 #restartContainer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: fit-content;
+  left: 30%;
+  top: 50%;
+}
+
+.loserDisplayPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 795px) {
+  .loser {
     position: absolute;
-    width: fit-content;
-    left: 30%;
-    top: 50%;
-}
-
-.loserDisplayPage{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    left: 20%;
+  }
+  .grid {
     position: absolute;
-    width: 100%;
-    height:100%;
-
+    left: 20%;
+  }
 }
 
-@media(max-width:795px){
-    .loser {
-        position: absolute;
-        left: 20%;
-    }
-    .grid {
-        position:absolute;
-        left: 20%;
-    }
+@media (max-width: 650px) {
+  .loser {
+    position: absolute;
+    left: 10%;
+  }
+  #restartContainer {
+    position: absolute;
+    left: 10%;
+  }
 
+  .numbers {
+    height: 75px;
+    width: 75px;
+    margin: 0px;
+    padding: 0px;
+  }
+  .grid {
+    width: 375px;
+    height: 375px;
+  }
 
+  .roundContainer {
+    position: absolute;
+    right: 100%;
+    padding: 0;
+    margin: 0;
+  }
 }
 
-@media(max-width:650px){
-    .loser {
-        position: absolute;
-        left: 10%;
-    }
-    #restartContainer{
-        position: absolute;
-        left: 10%;
-    }
+@media (max-width: 450px) {
+  .loser {
+    font-size: 50px;
+    position: absolute;
+    top: 20%;
+    right: 100%;
+  }
 
-    .numbers {
-        height: 75px;
-        width: 75px;
-        margin: 0px;
-        padding: 0px;
-    }
-    .grid{
-        width: 375px;
-        height: 375px;
-    }
+  #restartContainer p {
+    font-size: 30px;
+  }
 
-    .roundContainer{
-        position: absolute;
-        right: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-
-
-
-
+  .restart {
+    width: 150px;
+    height: 75;
+    font-size: 30px;
+  }
 }
 
-@media (max-width:450px){
-    .loser {
-        font-size: 50px;
-        position: absolute;
-        top: 20%;
-        right: 100%;
-    }
-
-    #restartContainer p {
-        font-size: 30px;
-    }
-
-    .restart {
-        width: 150px;
-        height: 75;
-        font-size: 30px;
-    }
-}
-
-
-@media (max-width:485px){
-    .numbers {
-        width: 60px;
-        height: 60px;
-
-    }
-    .grid{
-        width: 300px;
-        height: 300px;
-        position: relative;
-        left: 10px;
-        top: 150px;
-
-    }
-    #round{
-        font-size: 30px;
-        position: relative;
-        top: 70px;
-        left: 200px;
-    }
-    .number{
-        font-size: 30px;
-        position: relative;
-        top: 5px;
-        left: 300px;
-    }
-
+@media (max-width: 485px) {
+  .numbers {
+    width: 60px;
+    height: 60px;
+  }
+  .grid {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    left: 10px;
+    top: 150px;
+  }
+  #round {
+    font-size: 30px;
+    position: relative;
+    top: 70px;
+    left: 200px;
+  }
+  .number {
+    font-size: 30px;
+    position: relative;
+    top: 5px;
+    left: 300px;
+  }
 }
